--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" href="./assets/icons/logopic.svg">
     <link rel="stylesheet" href="./style/style.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
     <!-- qoute -->
     <div class="qoute-content">
         <div class="qoute-pic">
-            <img src="./assets/images/gif profile.gif" alt="qoute picture">
+            <img src="./assets/images/gifprofile.gif" alt="qoute picture">
         </div>
         <div class="qoute-text">
             <div>
@@ -30,7 +31,7 @@
     <!-- card header -->
     <div class="card-header">
         <a href="./pages/create.html">
-            <img src="./assets/icons/add task.png" alt="">
+            <img src="./assets/images/addtask.png" alt="">
         </a>
     </div>
     <!-- grid container -->
