--- a/pages/create.html
+++ b/pages/create.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create</title>
+    <link rel="icon" href="./assets/icons/logopic.svg">
     <link rel="stylesheet" href="../style/style.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
