--- a/pages/view-delete.html
+++ b/pages/view-delete.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create</title>
+    <title>View & Delete</title>
+    <link rel="icon" href="./assets/icons/logopic.svg">
     <link rel="stylesheet" href="../style/style.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
