--- a/pages/view-delete.html
+++ b/pages/view-delete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View & Delete</title>
-    <link rel="icon" href="./assets/icons/logopic.svg">
+    <link rel="icon" href="../assets/images/logopic.png">
     <link rel="stylesheet" href="../style/style.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
